rustform-studio/generated/target/debug/build/crossbeam-utils-97d6ebbc4830508e/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /nix/store/xf5jkzfn9fi1h4fkj353wdf1kc11d04p-rust-default-1.89.0/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:3710:1
     |
3710 | / atomic_int! {
3711 | |     cfg(target_has_atomic = "16"),
3712 | |     cfg(target_has_atomic_equal_alignment = "16"),
3713 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
3726 | |     u16 AtomicU16
3727 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
